--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Vite + Vue</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="container">
+      <div id="app"></div>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
